--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,16 +47,22 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
-	  <key>CFBundleURLTypes</key>
+    <key>CFBundleURLTypes</key>
+    <array>
+    <dict>
+      <key>CFBundleTypeRole</key>
+      <string>Editor</string>
+      <key>CFBundleURLSchemes</key>
       <array>
-        <dict>
-          <key>CFBundleTypeRole</key>
-          <string>Editor</string>
-          <key>CFBundleURLSchemes</key>
-          <array>
-            <string>com.usersflutter</string>
-          </array>
-        </dict>
+        <string>com.usersflutter</string>
       </array>
+    </dict>
+    </array>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Upload images to profile</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Upload image from camera to profile</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Post videos to profile</string>
 </dict>
 </plist>
